proper readme and todo files. default template. cleanup.

--- a/data/default/ns.conf
+++ b/data/default/ns.conf
@@ -12,7 +12,7 @@ commentsPerPage = 20
 
 # Variables that will be passed to the templates
 # For example the namespace tagline.
-variables = {}
+variables = {"keywords" : "fantorepo example"}
 
 
 
@@ -109,3 +109,15 @@ enableToc = false
 
 
 
+
+# The public url for this namespace root.
+# ie: http://www.mysite.com/ or http://www.mysite.com/ns1/
+# Required to be set correctly for Google sitemap generation.
+publicUri = ""
+
+# Typically a namspace files are placed in the /files/ folder
+# Howhever at times it's necessary to expose a file at the site/namespace root
+# For example the favicon.ico file or say a Google site verification file.
+# Files listed here will be automatically exposed under the root
+# For example '/robots.txt' would return /files/robots.txt for that namespace
+rootFiles = ["robots.txt","sitemap.xml","sitemap.xml.gz","favicon.ico"]
